barang domain and controll
